fix minor layout issues

--- a/public/css/style-general.css
+++ b/public/css/style-general.css
@@ -95,6 +95,13 @@ body {
     box-shadow: 0 0 25px var(--main-color);
 }
 
+.user-avatar {
+    width: 30px; 
+    height: 30px; 
+    border-radius: 50%;
+    object-fit: cover; 
+    margin-right: 10px;
+}
 
 
 .footer {
